k8s/base/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-demo-app-1
  namespace: my-namespace-demo-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-demo
  template:
    metadata:
      labels:
        app: pod-demo
    spec:
      containers:
        - name: pod-container
          image: 867344463619.dkr.ecr.ap-northeast-2.amazonaws.com/github-actions-cicd-demo:latest
          ports:
            - name: web           # 포트 이름 추가
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          startupProbe:
            httpGet:
              path: /actuator/health/startup
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30
